Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -39,32 +39,49 @@ CLASS lcl_event_handler DEFINITION.
         e_object
         e_interactive
         sender.
+
+    CLASS-METHODS on_user_command
+      FOR EVENT user_command OF cl_gui_alv_grid
+      IMPORTING
+        e_ucomm
+        sender.
 ENDCLASS.
+
 
 CLASS lcl_event_handler IMPLEMENTATION.
   METHOD on_toolbar.
     DATA ls_button TYPE stb_button.
 
     CLEAR ls_button.
-    ls_button-function  = '<FUNC_CODE>'.   " 버튼 Function Code (USER_COMMAND에서 구분)
-    ls_button-icon      = <ICON>.          " 버튼에 표시되는 아이콘
-    ls_button-text      = '<TEXT>'.        " 버튼에 표시되는 텍스트
-    ls_button-quickinfo = '<QUICKINFO>'.   " 마우스 오버 시 표시되는 툴팁 설명
-    ls_button-butn_type = '0'.             " 버튼 타입 (0: 일반 버튼)
+    ls_button-function  = '<FUNC_CODE>'.
+    ls_button-icon      = <ICON>.
+    ls_button-text      = '<TEXT>'.
+    ls_button-quickinfo = '<QUICKINFO>'.
+    ls_button-butn_type = '0'.
 
     INSERT ls_button INTO TABLE e_object->mt_toolbar.
   ENDMETHOD.
+
+
+  METHOD on_user_command.
+    CASE e_ucomm.
+      WHEN '<FUNC_CODE>'.
+        " 버튼 클릭 시 처리 로직
+      WHEN OTHERS.
+    ENDCASE.
+  ENDMETHOD.
 ENDCLASS.
 
-
 *************** PBO ****************
-SET HANDLER lcl_event_handler=>on_toolbar FOR go_alv.
+SET HANDLER lcl_event_handler=>on_toolbar      FOR go_alv.
+SET HANDLER lcl_event_handler=>on_user_command FOR go_alv.
 
 CALL METHOD go_alv->set_table_for_first_display
   EXPORTING
     i_structure_name = '<DDIC 구조>'
   CHANGING
     it_outtab        = <itab>.
+
 ```
 
 </br>
