Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -17,7 +17,8 @@
 </br>
 
 ### 1) ALV 표준 툴바 확장 (TOOLBAR 이벤트)
-- ALV 표준 툴바에 사용자 정의 버튼을 추가·제어하기 위해 사용되는 이벤트
+- `TOOLBAR` : 툴바에 버튼을 추가/구성
+- `USER_COMMAND` : 버튼 클릭 시 동작 처리
   
 | 값 | 의미 |
 |----|------|
@@ -35,16 +36,12 @@ CLASS lcl_event_handler DEFINITION.
   PUBLIC SECTION.
     CLASS-METHODS on_toolbar
       FOR EVENT toolbar OF cl_gui_alv_grid
-      IMPORTING
-        e_object
-        e_interactive
-        sender.
+      IMPORTING e_object e_interactive sender.
 
     CLASS-METHODS on_user_command
       FOR EVENT user_command OF cl_gui_alv_grid
       IMPORTING
-        e_ucomm
-        sender.
+        e_ucomm sender.
 ENDCLASS.
 
 
