Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -40,8 +40,7 @@ CLASS lcl_event_handler DEFINITION.
 
     CLASS-METHODS on_user_command
       FOR EVENT user_command OF cl_gui_alv_grid
-      IMPORTING
-        e_ucomm sender.
+      IMPORTING e_ucomm sender.
 ENDCLASS.
 
 
