Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -79,7 +79,83 @@ CALL METHOD go_alv->set_table_for_first_display
     it_outtab        = <itab>.
 
 ```
+- `cl_gui_alv_grid=>mc_style_button` → ALV 셀을 “클릭 가능한 버튼 형태” 로 표시하는 스타일 상수
+```abap
+*************** TOP ****************
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE sbook.
+DATA: display_bookings TYPE c LENGTH 10,   " 버튼 텍스트
+      it_cell_style    TYPE lvc_t_styl,     " 셀 스타일
+     END OF gs_data.
+DATA gt_data LIKE TABLE OF gs_data.
+DATA gs_cell_style TYPE lvc_s_style.
 
+*************** F01 ****************
+FORM get_data.
+  SELECT * FROM sbook
+    INTO CORRESPONDING FIELDS OF TABLE gt_data.
+
+  LOOP AT gt_data INTO gs_data.
+    IF gs_data-loccuram >= 800.
+      gs_data-display_bookings = 'Detail'.
+
+      CLEAR gs_cell_style.
+      gs_cell_style-fieldname = 'DISPLAY_BOOKINGS'.
+      gs_cell_style-style     = cl_gui_alv_grid=>mc_style_button.
+      APPEND gs_cell_style TO gs_data-it_cell_style.
+    ENDIF.
+
+    MODIFY gt_data FROM gs_data
+      TRANSPORTING display_bookings it_cell_style.
+
+    CLEAR: gs_data, gs_cell_style.
+  ENDLOOP.
+ENDFORM.
+
+
+FORM set_layout.
+  gs_layout-stylefname = 'IT_CELL_STYLE'.
+ENDFORM.
+
+
+FORM set_fieldcat.
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'DISPLAY_BOOKINGS'.
+  gs_fcat-coltext  = 'Detail'.
+  gs_fcat-col_pos  = 3.
+  APPEND gs_fcat TO gt_fcat.
+ENDFORM.
+
+
+*************** C01 ****************
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS on_button_click
+      FOR EVENT button_click OF cl_gui_alv_grid
+      IMPORTING es_row_no.
+ENDCLASS.
+
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_button_click.
+    READ TABLE gt_data INTO gs_data INDEX es_row_no-row_id.
+    IF sy-subrc = 0.
+      MESSAGE gs_data-class TYPE 'I'.
+    ENDIF.
+  ENDMETHOD.
+ENDCLASS.
+
+
+*************** PBO ****************
+SET HANDLER lcl_event_handler=>on_button_click FOR go_alv.
+
+CALL METHOD go_alv->set_table_for_first_display
+  EXPORTING
+    is_layout        = gs_layout
+  CHANGING
+    it_outtab        = gt_data
+    it_fieldcatalog = gt_fcat.
+```
 </br>
 </br>
 
