Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -137,14 +137,14 @@ CLASS lcl_event_handler DEFINITION.
   PUBLIC SECTION.
     CLASS-METHODS on_button_click
       FOR EVENT button_click OF cl_gui_alv_grid
-      IMPORTING es_row_no.
+      IMPORTING es_row_no es_col_id.
 ENDCLASS.
 
 
 CLASS lcl_event_handler IMPLEMENTATION.
   METHOD on_button_click.
-    READ TABLE gt_data INTO gs_data INDEX es_row_no-row_id.
-    IF sy-subrc = 0.
+    IF ES_COL_ID-fieldname = 'DISPLAY_BOOKINGS'.
+      READ TABLE gt_data INTO gs_data INDEX es_row_no-row_id.
       MESSAGE gs_data-class TYPE 'I'.
     ENDIF.
   ENDMETHOD.
