--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -79,6 +79,10 @@ CALL METHOD go_alv->set_table_for_first_display
     it_outtab        = <itab>.
 
 ```
+</br>
+</br>
+
+### 2) ALV 셀 버튼(Button) 동적 생성 및 클릭 이벤트 처리
 - `cl_gui_alv_grid=>mc_style_button` → ALV 셀을 “클릭 가능한 버튼 형태” 로 표시하는 스타일 상수
 - `gs_cell_style-fieldname` → 버튼/스타일을 적용할 ALV 컬럼(필드)명 지정
 - `gs_cell_style-style` → 해당 컬럼 셀에 적용할 UI 스타일(버튼, 비활성 등) 지정
