Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -94,17 +94,16 @@ CALL METHOD go_alv->set_table_for_first_display
 DATA: BEGIN OF gs_data.
         INCLUDE TYPE sbook.
 DATA: display_bookings TYPE c LENGTH 10,   " 버튼 텍스트
-      it_cell_style    TYPE lvc_t_styl,     " 셀 스타일
+      it_cell_style    TYPE LVC_T_STYL,     " 셀 스타일
      END OF gs_data.
-DATA gt_data LIKE TABLE OF gs_data.
-DATA gs_cell_style TYPE lvc_s_style.
+DATA gs_cell_style TYPE LVC_S_STYL.
 
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
   PUBLIC SECTION.
-    CLASS-METHODS on_button_click
-      FOR EVENT button_click OF cl_gui_alv_grid
-      IMPORTING es_row_no es_col_id.
+  CLASS-METHODS: on_button_click
+    FOR EVENT button_click OF CL_GUI_ALV_GRID
+    IMPORTING ES_ROW_NO ES_COL_ID.
 ENDCLASS.
 
 CLASS lcl_event_handler IMPLEMENTATION.
@@ -123,17 +122,14 @@ FORM get_data.
 
   LOOP AT gt_data INTO gs_data.
     IF gs_data-loccuram >= 800.
-      gs_data-display_bookings = 'Detail'.
-
-      CLEAR gs_cell_style.
+      " excp_fld 초록일 때, 버튼도 표시하도록 함
       gs_cell_style-fieldname = 'DISPLAY_BOOKINGS'.
-      gs_cell_style-style     = cl_gui_alv_grid=>mc_style_button.
+      gs_cell_Style-style = cl_gui_alv_grid=>MC_STYLE_BUTTON.
       APPEND gs_cell_style TO gs_data-it_cell_style.
+      gs_data-display_bookings = 'Detail'. " 버튼Text
     ENDIF.
 
-    MODIFY gt_data FROM gs_data
-      TRANSPORTING display_bookings it_cell_style.
-
+    MODIFY gt_data FROM gs_data.
     CLEAR: gs_data, gs_cell_style.
   ENDLOOP.
 ENDFORM.
@@ -147,8 +143,8 @@ ENDFORM.
 FORM set_fieldcat.
   CLEAR gs_fcat.
   gs_fcat-fieldname = 'DISPLAY_BOOKINGS'.
-  gs_fcat-coltext  = 'Detail'.
-  gs_fcat-col_pos  = 3.
+  gs_fcat-col_pos = 3.
+  gs_fcat-coltext = 'Display Detail'.
   APPEND gs_fcat TO gt_fcat.
 ENDFORM.
 
@@ -160,7 +156,7 @@ CALL METHOD go_alv->set_table_for_first_display
     is_layout        = gs_layout
   CHANGING
     it_outtab        = gt_data
-    it_fieldcatalog = gt_fcat.
+    it_fieldcatalog  = gt_fcat.
 ```
 </br>
 </br>
