Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -92,6 +92,61 @@ CALL METHOD go_alv->set_table_for_first_display
 ```abap
 *************** TOP ****************
 DATA: BEGIN OF gs_data.
+        INCLUDE TYPE <DB_STR>.
+DATA: <BTN_FIELD> TYPE c LENGTH 10,
+      <STYLE_FLD> TYPE lvc_t_styl,
+     END OF gs_data.
+
+DATA: gt_data       TYPE STANDARD TABLE OF gs_data,
+      gs_data       TYPE gs_data,
+      gs_cell_style TYPE lvc_s_styl.
+
+*************** C01 ****************
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS on_button_click
+      FOR EVENT button_click OF cl_gui_alv_grid
+      IMPORTING es_row_no es_col_id.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_button_click.
+    IF es_col_id-fieldname = '<BTN_FIELD>'.
+      READ TABLE gt_data INTO gs_data INDEX es_row_no-row_id.
+      MESSAGE <MSG_TEXT> TYPE 'I'.
+    ENDIF.
+  ENDMETHOD.
+ENDCLASS.
+
+*************** F01 ****************
+FORM get_data.
+  SELECT * FROM <DB_TAB>
+    INTO CORRESPONDING FIELDS OF TABLE gt_data.
+
+  LOOP AT gt_data INTO gs_data.
+    IF <BTN_COND>.
+      gs_cell_style-fieldname = '<BTN_FIELD>'.
+      gs_cell_style-style     = cl_gui_alv_grid=>mc_style_button.
+      APPEND gs_cell_style TO gs_data-<STYLE_FLD>.
+      gs_data-<BTN_FIELD> = '<BTN_TEXT>'.
+    ENDIF.
+    MODIFY gt_data FROM gs_data.
+    CLEAR: gs_data, gs_cell_style.
+  ENDLOOP.
+ENDFORM.
+
+*************** PBO ****************
+SET HANDLER lcl_event_handler=>on_button_click FOR <ALV_OBJ>.
+
+gs_layout-stylefname = '<STYLE_FLD>'.
+
+CALL METHOD <ALV_OBJ>->set_table_for_first_display
+  EXPORTING is_layout = gs_layout
+  CHANGING  it_outtab = gt_data.
+```
+```abap
+*************** TOP ****************
+DATA: BEGIN OF gs_data.
         INCLUDE TYPE sbook.
 DATA: display_bookings TYPE c LENGTH 10,   " 버튼 텍스트
       it_cell_style    TYPE LVC_T_STYL,     " 셀 스타일
