--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -92,13 +92,14 @@ CALL METHOD go_alv->set_table_for_first_display
 ```abap
 *************** TOP ****************
 DATA: BEGIN OF gs_data.
-        INCLUDE TYPE <DB_STR>.
-DATA: <BTN_FIELD> TYPE c LENGTH 10,
-      <STYLE_FLD> TYPE lvc_t_styl,
+        INCLUDE TYPE <DB_STRUCTURE>.
+DATA: <BUTTON_FIELD> TYPE c LENGTH 10,
+      <STYLE_FIELD>  TYPE lvc_t_styl,
      END OF gs_data.
 
 DATA: gt_data       TYPE STANDARD TABLE OF gs_data,
       gs_cell_style TYPE lvc_s_styl.
+
 
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
@@ -110,38 +111,30 @@ ENDCLASS.
 
 CLASS lcl_event_handler IMPLEMENTATION.
   METHOD on_button_click.
-    IF es_col_id-fieldname = '<BTN_FIELD>'.
-      READ TABLE gt_data INTO gs_data INDEX es_row_no-row_id.
-      MESSAGE <MSG_TEXT> TYPE 'I'.
+    IF es_col_id-fieldname = '<BUTTON_FIELD>'.
     ENDIF.
   ENDMETHOD.
 ENDCLASS.
 
-*************** F01 ****************
-FORM get_data.
-  SELECT * FROM <DB_TAB>
-    INTO CORRESPONDING FIELDS OF TABLE gt_data.
 
+*************** F01 ****************
+FORM set_button.
   LOOP AT gt_data INTO gs_data.
-    IF <BTN_COND>.
-      gs_cell_style-fieldname = '<BTN_FIELD>'.
-      gs_cell_style-style     = cl_gui_alv_grid=>mc_style_button.
-      APPEND gs_cell_style TO gs_data-<STYLE_FLD>.
-      gs_data-<BTN_FIELD> = '<BTN_TEXT>'.
-    ENDIF.
+    gs_cell_style-fieldname = '<BUTTON_FIELD>'.
+    gs_cell_style-style     = cl_gui_alv_grid=>mc_style_button.
+    APPEND gs_cell_style TO gs_data-<STYLE_FIELD>.
+    gs_data-<BUTTON_FIELD> = '<BUTTON_TEXT>'.
     MODIFY gt_data FROM gs_data.
-    CLEAR: gs_data, gs_cell_style.
   ENDLOOP.
 ENDFORM.
 
+
 *************** PBO ****************
-SET HANDLER lcl_event_handler=>on_button_click FOR <ALV_OBJ>.
+SET HANDLER lcl_event_handler=>on_button_click FOR <ALV_OBJECT>.
+gs_layout-stylefname = '<STYLE_FIELD>'.
 
-gs_layout-stylefname = '<STYLE_FLD>'.
-
-CALL METHOD <ALV_OBJ>->set_table_for_first_display
-  EXPORTING is_layout = gs_layout
-  CHANGING  it_outtab = gt_data.
+CALL METHOD <ALV_OBJECT>->set_table_for_first_display
+  CHANGING it_outtab = gt_data.
 ```
 ```abap
 *************** TOP ****************
