Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -83,9 +83,12 @@ CALL METHOD go_alv->set_table_for_first_display
 </br>
 
 ### 2) ALV 셀 버튼(Button) 동적 생성 및 클릭 이벤트 처리
-- `cl_gui_alv_grid=>mc_style_button` → ALV 셀을 “클릭 가능한 버튼 형태” 로 표시하는 스타일 상수
+- 조건에 따라 ALV 특정 셀을 버튼으로 표시하고, 버튼 클릭 시 해당 행 데이터를 기준으로 동작을 처리
 - `lvc_s_styl` → ALV 셀 단위 스타일(버튼/입력불가 등) 정의 구조
 - `lvc_t_styl` → 셀 스타일을 여러 개 담는 내부테이블(행·컬럼별 적용용)
+</br>
+
+- `cl_gui_alv_grid=>mc_style_button` → ALV 셀을 “클릭 가능한 버튼 형태” 로 표시하는 스타일 상수
 - `gs_cell_style-fieldname` → 버튼/스타일을 적용할 ALV 컬럼(필드)명 지정
 - `gs_cell_style-style` → 해당 컬럼 셀에 적용할 UI 스타일(버튼, 비활성 등) 지정
 - `gs_layout-stylefname` → ALV 데이터 구조에서 셀 스타일 정보를 담고 있는 필드명 연결
