Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -84,6 +84,11 @@ CALL METHOD go_alv->set_table_for_first_display
 
 ### 2) ALV 셀 버튼(Button) 동적 생성 및 클릭 이벤트 처리
 - 조건에 따라 ALV 특정 셀을 버튼으로 표시하고, 버튼 클릭 시 해당 행 데이터를 기준으로 동작을 처리
+  
+<img width="464" height="222" alt="image" src="https://github.com/user-attachments/assets/ceb7e53e-2aa1-451a-a292-50d109b49cc8" />
+</br>
+</br>
+
 - `LVC_S_STYL` → ALV 셀 단위 스타일(버튼/입력불가 등) 정의 구조
 - `LVC_T_STYL` → 셀 스타일을 여러 개 담는 내부테이블(행·컬럼별 적용용)
 </br>
