--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -79,6 +79,50 @@ CALL METHOD go_alv->set_table_for_first_display
     it_outtab        = <itab>.
 
 ```
+```abap
+*************** C01 ****************
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+  CLASS-METHODS:
+      ON_TOOLBAR FOR EVENT TOOLBAR
+    OF CL_GUI_ALV_GRID IMPORTING E_OBJECT,
+      ON_USER_COMMAND FOR EVENT USER_COMMAND
+    OF CL_GUI_ALV_GRID IMPORTING E_UCOMM.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD ON_TOOLBAR.
+    DATA ls_button TYPE STB_BUTTON.
+    ls_button-butn_type = 3.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'CUSTOM_TB'.
+    ls_button-icon = ICON_FLIGHT.
+    ls_button-quickinfo = 'This is tooltip~~'.
+    ls_button-butn_type = 0.
+    ls_button-text = 'flight'.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+  ENDMETHOD.
+
+  METHOD ON_USER_COMMAND.
+    DATA: lv_row TYPE I,
+          lv_col TYPE I.
+
+    CASE E_UCOMM.
+      WHEN 'CUSTOM_TB'.
+        CALL METHOD go_alv->get_current_cell
+          IMPORTING
+            e_row     = lv_row
+            e_col     = lv_col.
+        MESSAGE 'Row: ' && lv_row && ', Col: ' && lv_col TYPE 'I'.
+
+*        MESSAGE 'flight' TYPE 'I'.
+      WHEN OTHERS.
+    ENDCASE.
+  ENDMETHOD.
+ENDCLASS.
+```
 </br>
 </br>
 
