Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -83,8 +83,7 @@ CALL METHOD go_alv->set_table_for_first_display
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
   PUBLIC SECTION.
-  CLASS-METHODS:
-      ON_TOOLBAR FOR EVENT TOOLBAR
+  CLASS-METHODS: ON_TOOLBAR FOR EVENT TOOLBAR
     OF CL_GUI_ALV_GRID IMPORTING E_OBJECT,
       ON_USER_COMMAND FOR EVENT USER_COMMAND
     OF CL_GUI_ALV_GRID IMPORTING E_UCOMM.
@@ -122,6 +121,16 @@ CLASS lcl_event_handler IMPLEMENTATION.
     ENDCASE.
   ENDMETHOD.
 ENDCLASS.
+
+*************** PBO ****************
+SET HANDLER lcl_event_handler=>on_toolbar FOR go_alv.
+SET HANDLER lcl_event_handler=>on_user_command FOR go_alv.
+
+CALL METHOD go_alv->set_table_for_first_display
+  EXPORTING
+    i_structure_name              = 'SBOOK'
+  CHANGING
+    it_outtab                     = gt_data
 ```
 </br>
 </br>
