Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -110,13 +110,7 @@ CLASS lcl_event_handler IMPLEMENTATION.
 
     CASE E_UCOMM.
       WHEN 'CUSTOM_TB'.
-        CALL METHOD go_alv->get_current_cell
-          IMPORTING
-            e_row     = lv_row
-            e_col     = lv_col.
-        MESSAGE 'Row: ' && lv_row && ', Col: ' && lv_col TYPE 'I'.
-
-*        MESSAGE 'flight' TYPE 'I'.
+        MESSAGE 'flight' TYPE 'I'.
       WHEN OTHERS.
     ENDCASE.
   ENDMETHOD.
