Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -268,7 +268,7 @@ CALL METHOD go_alv->set_table_for_first_display
 
 | Method | 설명 |
 |------|------|
-| `get_current_cell` | 현재 커서가 위치한 셀의 좌표와 값 반환 |
+| **`get_current_cell`** | 현재 커서가 위치한 셀의 좌표와 값 반환 |
 | `get_selected_cells` | 사용자가 선택한 셀들의 좌표와 값 반환 |
 | `get_selected_columns` | 선택된 컬럼 이름 목록 반환 |
 | `get_selected_rows` | 선택된 행 번호(Row Index) 반환 |
