--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -276,6 +276,39 @@ CALL METHOD go_alv->set_table_for_first_display
 | **`get_subtotals`** | ALV Grid에 설정된 현재 소계(Subtotal) 정보 반환 |
 | **`set_toolbar_interactive`** | ALV 툴바 이벤트를 강제로 발생시킴 |
 | **`set_user_command`** | 현재 USER-COMMAND 값을 강제로 덮어씀 |
+</br>
+
+**1) `get_current_cell`**
+- 현재 커서가 위치한 ALV 셀의 행·컬럼 인덱스를 가져오는 메서드
+```abap
+CALL METHOD <alv_grid>->get_current_cell
+  IMPORTING
+    e_row = <row_index>
+    e_col = <col_index>.
+```
+```abap
+CLASS-METHODS on_user_command
+  FOR EVENT user_command OF cl_gui_alv_grid
+  IMPORTING e_ucomm.
+
+METHOD on_user_command.
+  DATA: lv_row TYPE i,   " 현재 행 번호
+        lv_col TYPE i.   " 현재 컬럼 번호
+
+  CASE e_ucomm.
+    WHEN 'CUSTOM_TB'.   " 툴바 버튼 클릭 시
+      CALL METHOD go_alv->get_current_cell
+        IMPORTING
+          e_row = lv_row
+          e_col = lv_col.
+      MESSAGE 'Row: ' && lv_row && ', Col: ' && lv_col TYPE 'I'.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMETHOD.
+```
+</br>
+
+**2) `set_user_command`**
 
 </br>
 </br>
