--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -267,17 +267,6 @@ CALL METHOD go_alv->set_table_for_first_display
 
 ### 3) ALV Control 주요 메소드 정리
 
-| Method | 설명 |
-|------|------|
-| **`get_current_cell`** | 현재 커서가 위치한 셀의 좌표와 값 반환 |
-| **`get_selected_cells`** | 사용자가 선택한 셀들의 좌표와 값 반환 |
-| **`get_selected_columns`** | 선택된 컬럼 이름 목록 반환 |
-| **`get_selected_rows`** | 선택된 행 번호(Row Index) 반환 |
-| **`get_subtotals`** | ALV Grid에 설정된 현재 소계(Subtotal) 정보 반환 |
-| **`set_toolbar_interactive`** | ALV 툴바 이벤트를 강제로 발생시킴 |
-| **`set_user_command`** | 현재 USER-COMMAND 값을 강제로 덮어씀 |
-</br>
-
 **1) `get_current_cell`**
 - 현재 커서가 위치한 ALV 셀의 행·컬럼 인덱스를 가져오는 메서드
 ```abap
@@ -309,6 +298,19 @@ ENDMETHOD.
 </br>
 
 **2) `set_user_command`**
+</br>
+
+| Method | 설명 |
+|------|------|
+| **get_current_cell** | 현재 커서가 위치한 셀의 좌표와 값 반환 |
+| **`get_selected_cells`** | 사용자가 선택한 셀들의 좌표와 값 반환 |
+| **`get_selected_columns`** | 선택된 컬럼 이름 목록 반환 |
+| **`get_selected_rows`** | 선택된 행 번호(Row Index) 반환 |
+| **`get_subtotals`** | ALV Grid에 설정된 현재 소계(Subtotal) 정보 반환 |
+| **`set_toolbar_interactive`** | ALV 툴바 이벤트를 강제로 발생시킴 |
+| **`set_user_command`** | 현재 USER-COMMAND 값을 강제로 덮어씀 |
+
+</br>
 
 </br>
 </br>
