Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -267,7 +267,7 @@ CALL METHOD go_alv->set_table_for_first_display
 
 ### 3) ALV Control 주요 메소드 정리
 
-**1) `get_current_cell`**
+**1) get_current_cell**
 - 현재 커서가 위치한 ALV 셀의 행·컬럼 인덱스를 가져오는 메서드
 ```abap
 CALL METHOD <alv_grid>->get_current_cell
@@ -297,7 +297,7 @@ ENDMETHOD.
 ```
 </br>
 
-**2) `set_user_command`**
+**2) set_user_command**
 </br>
 
 | Method | 설명 |
