Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -265,12 +265,15 @@ CALL METHOD go_alv->set_table_for_first_display
 ```
 </br>
 </br>
+
+---
+
 </br>
 
-### 3) ALV Control 주요 메소드 정리
+## < ALV Control 주요 메소드 및 추가적인 이벤트 정리 >
 </br>
 
-**1) get_current_cell**
+### 1) get_current_cell
 - 현재 커서가 위치한 ALV 셀의 행·컬럼 인덱스를 가져오는 메서드
 ```abap
 CALL METHOD <alv_grid>->get_current_cell
