Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -295,6 +295,7 @@ CALL METHOD <alv_grid>->get_current_cell
     e_row = <row_index>
     e_col = <col_index>.
 ```
+- 커스텀 툴바 버튼(`CUSTOM_TB`) 클릭 시 현재 커서가 있는 ALV 셀의 행·컬럼을 조회
 ```abap
 CLASS-METHODS on_user_command
   FOR EVENT user_command OF cl_gui_alv_grid
