--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -266,6 +266,14 @@ CALL METHOD go_alv->set_table_for_first_display
 </br>
 </br>
 
+### 3) ALV USER_COMMAND 실행 전 제어 (before_user_command)
+- USER_COMMAND가 실행되기 직전에 호출되어, 버튼·기능 실행을 제어하거나 차단하는 이벤트
+- `before_user_command` → ALV에서 사용자 액션이 발생했을 때, USER_COMMAND가 처리되기 직전에 먼저 호출되는 이벤트
+- `e_ucomm` → 클릭된 버튼의 Function Code
+
+</br>
+</br>
+
 ---
 
 </br>
@@ -297,6 +305,8 @@ CALL METHOD <alv_grid>->get_current_cell
 ```
 - 커스텀 툴바 버튼(`CUSTOM_TB`) 클릭 시 현재 커서가 있는 ALV 셀의 행·컬럼을 조회
 ```abap
+*************** C01 ****************
+
 CLASS-METHODS on_user_command
   FOR EVENT user_command OF cl_gui_alv_grid
   IMPORTING e_ucomm.
