Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -270,7 +270,28 @@ CALL METHOD go_alv->set_table_for_first_display
 - USER_COMMAND가 실행되기 직전에 호출되어, 버튼·기능 실행을 제어하거나 차단하는 이벤트
 - `before_user_command` → ALV에서 사용자 액션이 발생했을 때, USER_COMMAND가 처리되기 직전에 먼저 호출되는 이벤트
 - `e_ucomm` → 클릭된 버튼의 Function Code
+```abap
+*************** C01 ****************
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS on_before_user_command
+      FOR EVENT before_user_command OF cl_gui_alv_grid
+      IMPORTING e_ucomm.
+ENDCLASS.
 
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_before_user_command.
+    CASE e_ucomm.
+      WHEN <FUNCTION_CODE>.
+        MESSAGE '실행 전 제어' TYPE 'I'.
+      WHEN OTHERS.
+    ENDCASE.
+  ENDMETHOD.
+ENDCLASS.
+
+*************** PBO ****************
+SET HANDLER lcl_event_handler=>on_before_user_command FOR go_alv.
+```
 </br>
 </br>
 
@@ -298,6 +319,7 @@ CALL METHOD go_alv->set_table_for_first_display
 ### 1) get_current_cell
 - 현재 커서가 위치한 ALV 셀의 행·컬럼 인덱스를 가져오는 메서드
 ```abap
+*************** C01 ****************
 CALL METHOD <alv_grid>->get_current_cell
   IMPORTING
     e_row = <row_index>
@@ -306,7 +328,6 @@ CALL METHOD <alv_grid>->get_current_cell
 - 커스텀 툴바 버튼(`CUSTOM_TB`) 클릭 시 현재 커서가 있는 ALV 셀의 행·컬럼을 조회
 ```abap
 *************** C01 ****************
-
 CLASS-METHODS on_user_command
   FOR EVENT user_command OF cl_gui_alv_grid
   IMPORTING e_ucomm.
