Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -265,6 +265,7 @@ CALL METHOD go_alv->set_table_for_first_display
 ```
 </br>
 </br>
+</br>
 
 ### 3) ALV USER_COMMAND 실행 전 제어 (before_user_command)
 - USER_COMMAND가 실행되기 직전에 호출되어, 버튼·기능 실행을 제어하거나 차단하는 이벤트
@@ -348,8 +349,16 @@ METHOD on_user_command.
 ENDMETHOD.
 ```
 </br>
+</br>
 
-**2) set_user_command**
+### 2) set_user_command
+- USER_COMMAND 값을 강제로 세팅하여 해당 USER_COMMAND 이벤트를 실행시키는 메서드
+```abap
+*************** C01 ****************
+CALL METHOD <alv_grid>->set_user_command
+  EXPORTING
+    i_ucomm = <FUNCTION_CODE>.
+```
 </br>
 </br>
 
