Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -268,7 +268,7 @@ CALL METHOD go_alv->set_table_for_first_display
 </br>
 
 ### 3) ALV USER_COMMAND 실행 전 제어 (before_user_command)
-- USER_COMMAND가 실행되기 직전에 호출되어, 버튼·기능 실행을 제어하거나 차단하는 이벤트
+- UUSER_COMMAND보다 먼저 동일한 UCOMM을 받아 실행 여부를 제어하는 이벤트
 - `before_user_command` → ALV에서 사용자 액션이 발생했을 때, USER_COMMAND가 처리되기 직전에 먼저 호출되는 이벤트
 - `e_ucomm` → 클릭된 버튼의 Function Code
 ```abap
