Update 1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -431,7 +431,9 @@ ENDMODULE.
 **3) `TOP` 파일에 변수 선언**
 - tables 선언, OK_CODE 데이터로 선언 필수 
 ```abap
-PROGRAM SAPMZBC410_SOLUTION_03.
+*&---------------------------------------------------------------------*
+*& Include MZMDPB03_001TOP                          - Module Pool      SAPMZMDPB03_001
+*&---------------------------------------------------------------------*
 
 TABLES: SDYN_CONN.
 
