Update 1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -431,9 +431,7 @@ ENDMODULE.
 **3) `TOP` 파일에 변수 선언**
 - tables 선언, OK_CODE 데이터로 선언 필수 
 ```abap
-*&---------------------------------------------------------------------*
-*& Include MZMDPB03_001TOP      - Module Pool      SAPMZMDPB03_001
-*&---------------------------------------------------------------------*
+PROGRAM SAPMZMDPB03_001.
 
 TABLES: SDYN_CONN.
 
@@ -546,9 +544,7 @@ ENDMODULE.
 **3) `TOP` 파일에 변수 선언**
 - tables 선언, OK_CODE 데이터로 선언 필수 
 ```abap
-*&---------------------------------------------------------------------*
-*& Include MZPRACTICE01B03_TOP   - Module Pool      SAPMZPRACTICE01B03
-*&---------------------------------------------------------------------*
+PROGRAM SAPMZPRACTICE01B03.
 
 TABLES: smeal.
 
