Update 1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -431,7 +431,7 @@ ENDMODULE.
 **3) `TOP` 파일에 변수 선언**
 - tables 선언, OK_CODE 데이터로 선언 필수 
 ```abap
-PROGRAM SAPMZMDPB03_001.
+PROGRAM SAPMZBC410_SOLUTION_03.
 
 TABLES: SDYN_CONN.
 
@@ -456,7 +456,7 @@ PROCESS AFTER INPUT.
 **5) PAI 코드 추가**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZMDPB03_001I01
+*& Include          MZBC410_SOLUTION_I01
 *&---------------------------------------------------------------------*
 
 MODULE user_command_0100 INPUT.
@@ -489,8 +489,8 @@ ENDMODULE.
 **6) PBO 코드 추가**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZMDPB03_001O01
-*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION_O01
+*&------------------------------------+---------------------------------*
 
 MODULE status_0100 OUTPUT.
   IF gv_subrc <> 0.
