Update 1-2. 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/1-2. 프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/1-2. 프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -333,6 +333,10 @@ DATA: ok_code TYPE sy-ucomm,
 
 **8) `PAI` 모듈 구현**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03002_I01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'CHBTN'.
@@ -352,6 +356,10 @@ ENDMODULE.
 **9) `PBO` 모듈 구현**
 - 시스템변수 : `SY-DATUM` = 오늘 날짜, `SY-UZEIT` = 현재 시간, `SY-UNAME` = 로그인 사용자 ID
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03002_O01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100' WITH sy-datum sy-uzeit sy-uname.
@@ -447,6 +455,10 @@ DATA: exit_button TYPE C,
 
 **5) `PAI` 모듈 구현**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION_I01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   IF exit_button = 'X'.
@@ -480,6 +492,10 @@ ENDMODULE.
 
 **6) `PBO` 모듈 구현**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION_O01
+*&------------------------------------+---------------------------------*
+
 MODULE status_0100 OUTPUT.
 
   IF gv_button = 1.
@@ -575,6 +591,10 @@ DATA: OK_CODE TYPE sy-ucomm,
 
 **4) `PAI` 모듈 구현**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          SAPMZPRACTICE02B03_I01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   CASE OK_CODE.
@@ -634,6 +654,10 @@ ENDMODULE.
 
 **5) `PBO` 모듈 구현**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          SAPMZPRACTICE02B03_O01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
   IF gv_button1 = 1.
     LOOP AT SCREEN.
