Update 1-2. 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/1-2. 프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/1-2. 프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -747,6 +747,10 @@ ENDMODULE.
 
 **2) 모듈 `PAI` 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03003_I01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   CASE OK_CODE.
@@ -802,6 +806,10 @@ ENDMODULE.
 
 **3) 모듈 `PBO` 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03003_O01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100'.
