--- a/ABAP 심화/1-3. 프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/1-3. 프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -244,6 +244,10 @@ PROCESS AFTER INPUT.
 
 **5) `PBO` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03004_O01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100' WITH sy-dynnr.
@@ -275,6 +279,10 @@ ENDMODULE.
 
 **6) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03004_I01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
@@ -381,6 +389,10 @@ DATA: OK_CODE TYPE sy-ucomm,
 
 **3) `F01` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZPRACTICE03B03_F01
+*&---------------------------------------------------------------------*
+
 FORM get_data USING pa_carrid pa_connid pa_fldate
               CHANGING gt_data.
 
@@ -400,6 +412,10 @@ ENDFORM.
 
 **4) `PBO` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZPRACTICE03B03_O01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
 * SET PF-STATUS 'xxxxxxxx'.
 * SET TITLEBAR 'xxx'.
@@ -422,6 +438,10 @@ ENDMODULE.
 
 **5) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZPRACTICE03B03_I01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   gv_carrid = ZSCARRFLIGHT_B03-CARRID.
   gv_connid = ZSCARRFLIGHT_B03-CONNID.
