Update 1-3. 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/1-3. 프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/1-3. 프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -530,6 +530,10 @@ PROCESS AFTER INPUT.
 **4) `PBO` 모듈 수정**
 - `OK_CODE` 초기화 코드 추가됨
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION2_O01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
 
   SET PF-STATUS 'S100'.
@@ -566,6 +570,10 @@ ENDMODULE.
 - exit_button = 'T'` 일 때의 if문 추가
 - `exit_button` 초기화 코드 추가
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION_I01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   IF exit_button = 'X'.
