Update 1-3. 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/1-3. 프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/1-3. 프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -245,7 +245,7 @@ PROCESS AFTER INPUT.
 **5) `PBO` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZB03004_O01
+*& Module Pool      SAPMZB03004
 *&---------------------------------------------------------------------*
 
 MODULE status_0100 OUTPUT.
@@ -280,7 +280,7 @@ ENDMODULE.
 **6) `PAI` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZB03004_I01
+*& Module Pool      SAPMZB03004
 *&---------------------------------------------------------------------*
 
 MODULE user_command_0100 INPUT.
@@ -390,7 +390,7 @@ DATA: OK_CODE TYPE sy-ucomm,
 **3) `F01` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZPRACTICE03B03_F01
+*& Module Pool      SAPMZPRACTICE03B03
 *&---------------------------------------------------------------------*
 
 FORM get_data USING pa_carrid pa_connid pa_fldate
@@ -413,7 +413,7 @@ ENDFORM.
 **4) `PBO` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZPRACTICE03B03_O01
+*& Module Pool      SAPMZPRACTICE03B03
 *&---------------------------------------------------------------------*
 
 MODULE status_0100 OUTPUT.
@@ -439,7 +439,7 @@ ENDMODULE.
 **5) `PAI` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZPRACTICE03B03_I01
+*& Module Pool      SAPMZPRACTICE03B03
 *&---------------------------------------------------------------------*
 
 MODULE user_command_0100 INPUT.
@@ -531,7 +531,7 @@ PROCESS AFTER INPUT.
 - `OK_CODE` 초기화 코드 추가됨
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZBC410_SOLUTION2_O01
+*& Module Pool      SAPMZBC410_SOLUTION_03_01
 *&---------------------------------------------------------------------*
 
 MODULE status_0100 OUTPUT.
@@ -571,7 +571,7 @@ ENDMODULE.
 - `exit_button` 초기화 코드 추가
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZBC410_SOLUTION_I01
+*& Module Pool      SAPMZBC410_SOLUTION_03_01
 *&---------------------------------------------------------------------*
 
 MODULE user_command_0100 INPUT.
