Update 1-2. 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/1-2. 프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/1-2. 프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -334,7 +334,7 @@ DATA: ok_code TYPE sy-ucomm,
 **8) `PAI` 모듈 구현**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZB03002_I01
+*& Module Pool      SAPMZB03002
 *&---------------------------------------------------------------------*
 
 MODULE user_command_0100 INPUT.
@@ -357,7 +357,7 @@ ENDMODULE.
 - 시스템변수 : `SY-DATUM` = 오늘 날짜, `SY-UZEIT` = 현재 시간, `SY-UNAME` = 로그인 사용자 ID
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZB03002_O01
+*& Module Pool      SAPMZB03002
 *&---------------------------------------------------------------------*
 
 MODULE status_0100 OUTPUT.
@@ -456,7 +456,7 @@ DATA: exit_button TYPE C,
 **5) `PAI` 모듈 구현**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZBC410_SOLUTION_I01
+*& Module Pool      SAPMZBC410_SOLUTION_03
 *&---------------------------------------------------------------------*
 
 MODULE user_command_0100 INPUT.
@@ -493,8 +493,8 @@ ENDMODULE.
 **6) `PBO` 모듈 구현**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZBC410_SOLUTION_O01
-*&------------------------------------+---------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03
+*&---------------------------------------------------------------------*
 
 MODULE status_0100 OUTPUT.
 
@@ -592,7 +592,7 @@ DATA: OK_CODE TYPE sy-ucomm,
 **4) `PAI` 모듈 구현**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          SAPMZPRACTICE02B03_I01
+*& Module Pool      SAPMZPRACTICE02B03
 *&---------------------------------------------------------------------*
 
 MODULE user_command_0100 INPUT.
@@ -655,7 +655,7 @@ ENDMODULE.
 **5) `PBO` 모듈 구현**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          SAPMZPRACTICE02B03_O01
+*& Module Pool      SAPMZPRACTICE02B03
 *&---------------------------------------------------------------------*
 
 MODULE status_0100 OUTPUT.
@@ -748,7 +748,7 @@ ENDMODULE.
 **2) 모듈 `PAI` 생성**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZB03003_I01
+*& Module Pool      SAPMZB03003
 *&---------------------------------------------------------------------*
 
 MODULE user_command_0100 INPUT.
@@ -807,7 +807,7 @@ ENDMODULE.
 **3) 모듈 `PBO` 생성**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZB03003_O01
+*& Module Pool      SAPMZB03003
 *&---------------------------------------------------------------------*
 
 MODULE status_0100 OUTPUT.
