Update 1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/1-1. 프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -364,6 +364,10 @@ PROCESS AFTER INPUT.
 
 **5) PAI 코드 추가**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZMDPB03_001
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE INPUT01.
     WHEN 'X'.
@@ -382,6 +386,10 @@ ENDMODULE.
 
 **6) PBO 코드 추가**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZMDPB03_001
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'. " Application 버튼들 등 설정
  SET TITLEBAR 'T100'.
@@ -456,7 +464,7 @@ PROCESS AFTER INPUT.
 **5) PAI 코드 추가**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZBC410_SOLUTION_I01
+*& Module Pool      SAPMZBC410_SOLUTION_03
 *&---------------------------------------------------------------------*
 
 MODULE user_command_0100 INPUT.
@@ -489,8 +497,8 @@ ENDMODULE.
 **6) PBO 코드 추가**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZBC410_SOLUTION_O01
-*&------------------------------------+---------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03
+*&---------------------------------------------------------------------*
 
 MODULE status_0100 OUTPUT.
   IF gv_subrc <> 0.
@@ -566,7 +574,7 @@ PROCESS AFTER INPUT.
 **5) PAI 코드 추가**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZPRACTICE01B03_I01
+*& Module Pool      SAPMZPRACTICE01B03
 *&---------------------------------------------------------------------*
 
 MODULE user_command_0100 INPUT.
