Update 1-5. 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/1-5. 프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/1-5. 프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -9,7 +9,7 @@
 
 - **`LEAVE TO SCREEN 0`** 같은 화면 전환 명령은 **`PAI`** 에서만
 - **`SCREEN-INPUT`** 같은 화면 속성 변경은 **`PBO`** 에서만
-- 사용자 입력 기반 SELECT는 **`PAI`** , 조회 결과 화면 반영/속성 변경은 **`PBO`**
+- 사용자 입력 기반 SELECT는 **`PAI`** , 조회 결과 예 반영/속성 변경은 **`PBO`**
 - **OK_CODE 초기화** 코드 꼭 넣어줘야 함 ( 보통 **`PBO`** 에서)
 - **`OK_CODE`** 케이스문은 **`PAI`** 에서
 - LOOP AT SCREEN 사용시 **`MODIFY SCREEN`** 넣기
@@ -126,6 +126,10 @@ ENDCHAIN.
 
 **2) `Screen` 코드에서 모듈 생성 ( PAI, PBO )**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03005
+*&---------------------------------------------------------------------*
+
 PROCESS BEFORE OUTPUT.
  MODULE STATUS_0100.
  MODULE INIT_DATA.
@@ -170,6 +174,10 @@ PROCESS AFTER INPUT.
 
 **3) `PAI` 에서 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03005
+*&---------------------------------------------------------------------*
+
 " 단일입력
 MODULE check_input INPUT.
   IF SCARR-CARRID IS NOT INITIAL.
@@ -237,6 +245,10 @@ PROCESS AFTER INPUT.
 ```
 - 해당 PAI 모듈에서 코드 작성
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03005
+*&---------------------------------------------------------------------*
+
 MODULE exit INPUT.
   CASE OK_CODE.
     WHEN 'EXIT'.
@@ -309,6 +321,10 @@ DATA: gv_answer TYPE C.
 </br>
 
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03005
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
